# Wixen

./: Cargo.toml  MainWindow.slint  MinimalArrayTest.slint  README.md  build.rs  settings.json
.github/workflows/: ci.yml  mirror.yml  release.yml
src/: accessibility.rs  account_settings.rs  bluesky.rs  bluesky_client.rs  constants.rs  dashboard.rs  event_handler.rs  feed_settings.rs  handlers.rs  i18n.rs  lib.rs  main.rs  mastodon.rs  mastodon_client.rs  rss.rs  rss_client.rs  settings.rs  sound_settings.rs  ui.rs  visual_settings.rs
tests/: accessibility_ui_test.rs  keyboard_accessibility_test.rs  keyboard_navigation_bindings_test.rs  keyboard_navigation_test.rs  settings_aes_fallback_test.rs  settings_fallback_test.rs  settings_rss_secure_test.rs  settings_secure_test.rs  settings_test.rs  settings_zeroize_test.rs  util.rs  visual_settings_test.rs  visual_settings_ui_test.rs  window_accessible_test.rs  window_test.rs
tools/: generate_ui_tests.py  generate_ui_tests.rs
