

[package]
name = "wixen"
version = "0.1.0"
edition = "2021"

[dependencies]
winit = "0.30" # Remove or keep only if needed for non-UI logic
accesskit_winit = "0.29" # Remove or keep only if needed for non-UI logic
slint = "1.13.0"
widestring = "0.5"
accesskit = "0.21"
keyring = "2.0"
aes-gcm = "0.10"
rand = "0.8"
zeroize = "1.6"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[build-dependencies]
slint-build = "1.13.0"

[lib]
name = "wixen"
path = "src/lib.rs"

